--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Главная</title>
     <link rel="stylesheet" href="Assets/CSS/output.css">
 </head>
-<body>
-    
+<body class="bg-linear-to-r from-[#2C0355] via-[#0A0010] to-[#13566C] flex items-center justify-center text-white">
+    <div class="flex flex-col gap-6 mt-6 items-center text-center px-6">
+        <p class="text-4xl font-semibold">NeiroseptiK</p>
+        <div class="flex items-center gap-5">
+            <img src="" alt="" class="w-[200px]">
+            <p class="text-[24px] max-w-[170px] leading-[100%] text-left font-medium">Ваш личный <span class="text-[30px] font-semibold">ассистент</span> для выездного обслуживания.</p>
+        </div>
+        <p class="text-[22px] leading-[100%] font-medium max-w-[330px]">
+            Хватит терять время на
+            планирование и напоминания. <br>
+            Верните себе 2 часа
+            свободного времени каждый день.
+        </p>
+        <a href="google.com" target="_blank" class="text-[22px] font-medium w-full h-12 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
+        <p class="text-[22px] leading-[100%] font-medium max-w-[335px]">
+            Автоматизация графика 
+            работы и напоминания <br>
+            Идеальная логистика
+            для большего числа заказов.
+            Аналитика доходов и расходов. <br>
+            Работайте с ПК или телефона,
+            интеграция с навигатором. <br>
+            Умный Телеграм-бот.
+        </p>
+    </div>
 </body>
 </html>
