--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Главная</title>
     <link rel="stylesheet" href="Assets/CSS/output.css">
 </head>
-<body class="bg-linear-to-r from-[#2C0355] via-[#0A0010] to-[#13566C] flex items-center justify-center text-white">
+<body class="bg-linear-to-r from-[#2C0355] via-[#0A0010] to-[#13566C] flex items-center justify-center text-white h-screen">
     <div class="flex flex-col gap-6 mt-6 items-center text-center px-6">
         <p class="text-4xl font-semibold">NeiroseptiK</p>
         <div class="flex items-center gap-5">
-            <img src="" alt="" class="w-[200px]">
+            <img src="Assets/Images/logo.png" alt="" class="w-[200px]">
             <p class="text-[24px] max-w-[170px] leading-[100%] text-left font-medium">Ваш личный <span class="text-[30px] font-semibold">ассистент</span> для выездного обслуживания.</p>
         </div>
         <p class="text-[22px] leading-[100%] font-medium max-w-[330px]">
