--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="flex flex-col gap-6 mt-6 items-center text-center px-6">
         <p class="text-4xl font-semibold">NeiroseptiK</p>
         <div class="flex items-center gap-5">
-            <img src="Assets/Images/logo.png" alt="" class="w-[200px]">
-            <p class="text-[24px] max-w-[170px] leading-[100%] text-left font-medium">Ваш личный <span class="text-[30px] font-semibold">ассистент</span> для выездного обслуживания.</p>
+            <img src="Assets/Images/logo.png" alt="" class="w-full max-w-2/5 sm:max-w-[200px]">
+            <p class="text-[24px] w-full max-w-2/5 sm:max-w-[170px] leading-[100%] text-left font-medium">Ваш личный <span class="text-[30px] font-semibold">ассистент</span> для выездного обслуживания.</p>
         </div>
         <p class="text-[22px] leading-[100%] font-medium max-w-[330px]">
             Хватит терять время на
