--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Верните себе 2 часа
             свободного времени каждый день.
         </p>
-        <a href="google.com" target="_blank" class="text-[22px] font-medium w-full h-12 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
+        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[22px] font-medium w-full h-12 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
         <p class="text-[22px] leading-[100%] font-medium max-w-[335px]">
             Автоматизация графика 
             работы и напоминания <br>
