--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
 </head>
 <body class="bg-linear-to-r from-[#2C0355] via-[#0A0010] to-[#13566C] flex items-center justify-center text-white h-screen">
     <div class="flex flex-col gap-6 mt-6 items-center text-center px-6">
-        <p class="text-4xl font-semibold">NeiroseptiK</p>
+        <p class="text-[5vh] font-semibold">NeiroseptiK</p>
         <div class="flex items-center gap-5">
-            <img src="Assets/Images/logo.png" alt="" class="w-full max-w-2/5 sm:max-w-[200px]">
-            <p class="text-[24px] w-full max-w-2/5 sm:max-w-[170px] leading-[100%] text-left font-medium">Ваш личный <span class="text-[30px] font-semibold">ассистент</span> для выездного обслуживания.</p>
+            <img src="Assets/Images/logo.png" alt="" class="h-[25vh] sm:h-[29vh]">
+            <p class="text-[2.3vh] leading-[100%] text-left font-medium shrink-0">
+                Ваш личный <br>
+                <span class="text-[3vh] font-semibold">ассистент</span> <br>
+                для выездного <br>
+                обслуживания.
+            </p>
         </div>
-        <p class="text-[22px] leading-[100%] font-medium max-w-[330px]">
-            Хватит терять время на
+        <p class="text-[2.3vh] leading-[100%] font-medium">
+            Хватит терять время на <br>
             планирование и напоминания. <br>
-            Верните себе 2 часа
+            Верните себе 2 часа <br>
             свободного времени каждый день.
         </p>
-        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[22px] font-medium w-full h-12 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
-        <p class="text-[22px] leading-[100%] font-medium max-w-[335px]">
-            Автоматизация графика 
+        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[2.3vh] font-semibold px-4 py-3.5 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
+        <p class="text-[2.3vh] leading-[100%] font-medium">
+            Автоматизация графика <br>
             работы и напоминания <br>
-            Идеальная логистика
-            для большего числа заказов.
+            Идеальная логистика <br>
+            для большего числа заказов. <br>
             Аналитика доходов и расходов. <br>
-            Работайте с ПК или телефона,
+            Работайте с ПК или телефона, <br>
             интеграция с навигатором. <br>
             Умный Телеграм-бот.
         </p>
