--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body class="bg-linear-to-r from-[#2C0355] via-[#0A0010] to-[#13566C] flex items-center justify-center text-white h-screen">
     <div class="flex flex-col gap-6 mt-6 items-center text-center px-6">
-        <p class="text-[5vh] font-semibold">NeiroseptiK</p>
+        <p class="text-[5svh] font-semibold">NeiroseptiK</p>
         <div class="flex items-center gap-5">
-            <img src="Assets/Images/logo.png" alt="" class="h-[25vh] sm:h-[29vh]">
-            <p class="text-[2.3vh] leading-[100%] text-left font-medium shrink-0">
+            <img src="Assets/Images/logo.png" alt="" class="h-[25svh] sm:h-[29svh]">
+            <p class="text-[2.3svh] leading-[100%] text-left font-medium shrink-0">
                 Ваш личный <br>
-                <span class="text-[3vh] font-semibold">ассистент</span> <br>
+                <span class="text-[3svh] font-semibold">ассистент</span> <br>
                 для выездного <br>
                 обслуживания.
             </p>
         </div>
-        <p class="text-[2.3vh] leading-[100%] font-medium">
+        <p class="text-[2.3svh] leading-[100%] font-medium">
             Хватит терять время на <br>
             планирование и напоминания. <br>
             Верните себе 2 часа <br>
             свободного времени каждый день.
         </p>
-        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[2.3vh] font-semibold px-4 py-3.5 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
-        <p class="text-[2.3vh] leading-[100%] font-medium">
+        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[2.3svh] font-semibold px-4 py-3.5 flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
+        <p class="text-[2.3svh] leading-[100%] font-medium">
             Автоматизация графика <br>
             работы и напоминания <br>
             Идеальная логистика <br>
