feat: remove margin

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Assets/CSS/output.css">
 </head>
 <body class="bg-linear-to-r from-[#2C0355] via-[#0A0010] to-[#13566C] flex items-center justify-center text-white h-screen">
-    <div class="flex flex-col gap-6 mt-6 items-center text-center px-6">
+    <div class="flex flex-col gap-4 items-center text-center px-6">
         <p class="text-[5svh] font-semibold">NeiroseptiK</p>
         <div class="flex items-center gap-5">
             <img src="Assets/Images/logo.png" alt="" class="h-[25svh] sm:h-[29svh]">
