--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Верните себе 2 часа <br>
             свободного времени каждый день.
         </p>
-        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[2.3svh] px-3.5 h-[5vh] font-semibold flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
+        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[2.3svh] px-3.5 h-[5vh] font-semibold flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl transition-all duration-300 hover:opacity-80 active:opacity-50">Протестировать бесплатно</a>
         <p class="text-[2.3svh] leading-[100%] font-medium">
             Автоматизация графика <br>
             работы и напоминания <br>
