--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             Верните себе 2 часа <br>
             свободного времени каждый день.
         </p>
-        <a href="https://www.google.com/?hl=ru" target="_blank" class="text-[2.3svh] px-3.5 h-[5vh] font-semibold flex items-center justify-center bg-linear-to-br from-[#9C4FD5] to-[#3D2C5C] rounded-2xl">Протестировать бесплатно</a>
+        <a href="https://www.google.com/?hl=ru" target="_blank" class="group transition-all duration-300 active:scale-95 text-[2.3svh] px-3.5 h-[5vh] font-semibold flex items-center justify-center bg-linear-to-b from-[#bf7ef0] to-[#594686] rounded-2xl relative overflow-hidden">
+            <span>Протестировать бесплатно</span>
+            <span class="absolute inset-0 bg-linear-to-b from-transparent via-transparent to-[#352463] transition-all duration-300 group-hover:opacity-0 group-active:opacity-100"></span>
+        </a>
         <p class="text-[2.3svh] leading-[100%] font-medium">
             Автоматизация графика <br>
             работы и напоминания <br>
