--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
             Верните себе 2 часа <br>
             свободного времени каждый день.
         </p>
-        <a href="https://www.google.com/?hl=ru" target="_blank" class="group transition-all duration-300 active:scale-95 text-[2.3svh] px-3.5 h-[5vh] font-semibold flex items-center justify-center bg-linear-to-b from-[#bf7ef0] to-[#594686] rounded-2xl relative overflow-hidden">
-            <span>Протестировать бесплатно</span>
-            <span class="absolute inset-0 bg-linear-to-b from-transparent via-transparent to-[#352463] transition-all duration-300 group-hover:opacity-0 group-active:opacity-100"></span>
+        <a href="https://www.google.com/?hl=ru" target="_blank" class="group transition-all duration-300 active:scale-95 text-[2.3svh] px-3.5 h-[5vh] font-semibold flex items-center justify-center bg-linear-to-b from-[#A252DD] to-[#3A2B58] hover:from-[#C380F5] hover:to-[#554282] active:from-[#8D47C1] active:to-[#2D2146] rounded-2xl relative overflow-hidden">
+            <span class="group-active:text-[#9761D3]">Протестировать бесплатно</span>
         </a>
         <p class="text-[2.3svh] leading-[100%] font-medium">
             Автоматизация графика <br>
